#125 - 통계 API 구조 변경